Bug 83058 - FILESAVE : DOCX File getting corrupted after RT due to Data label position is invalid in chart.xml
Summary: FILESAVE : DOCX File getting corrupted after RT due to Data label position is...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3.1.2 release
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:4.5.0
Keywords: regression
Depends on:
Blocks:
 
Reported: 2014-08-25 11:45 UTC by Priyanka Gaikwad
Modified: 2015-04-07 21:37 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Docx containing chart with data labels (35.09 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-08-25 11:45 UTC, Priyanka Gaikwad
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Priyanka Gaikwad 2014-08-25 11:45:49 UTC
Created attachment 105231 [details]
Docx containing chart with data labels

File contain chart with data labels.

Steps to reproduce:
1] Open attached file in LO
2] Perform save_as
3] Open saved file in MS Office 2010

Current behavior :
File get corrupt while opening in MS Office 2010.

Expected behavior :
File Should open properly in MS Office 2010.
Comment 1 Commit Notification 2015-01-03 00:55:13 UTC
PriyankaGaikwad committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a7052b906dfd1d749f7da9ea64a3479d7c1cc2c9

fdo#83058 File corrupt due to data label position is invalid in chart.xml

It will be available in 4.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 2 Timur 2015-01-05 13:02:50 UTC
I change version from 4.4.0 alpha to 4.3.1.2 where it was first confirmed (it may also be 4.3.1.1, I didn't test).
Since it can't be reproduces with earlier versions, I add "regression".
It would be nice to see this backported to 4.4. and 4.3.