fdo#83058 File corrupt due to data label position is invalid in chart.xml

- File getting corrupted after RT due to data label position is invalid in chart.xml
- LO must not export invalid label position property if chart type doesn't support that positioning in MS Office.
- For clusterd bar chart XML Difference
chart1.xml
Original file
<c:barChart>
  <c:grouping val="clustered" />
  <c:ser>
      <c:dLbls>
         ...
        <c:dLbl>
            <c:dLblPos val="outEnd" />
        </c:dLbl>
         ...
      </c:dLbls>
  </c:ser>
</c:barChart>

Roundtrip file
<c:barChart>
  <c:grouping val="clustered" />
  <c:ser>
      <c:dLbls>
         ...
        <c:dLbl>
            <c:dLblPos val="r" />
        </c:dLbl>
         ...
      </c:dLbls>
  </c:ser>
</c:barChart>

Change-Id: I9cae11b8d198aaa70fb05cb3bf329cd898519170
Reviewed-on: https://gerrit.libreoffice.org/11141
Reviewed-by: Kohei Yoshida <libreoffice@kohei.us>
Tested-by: Kohei Yoshida <libreoffice@kohei.us>