include/oox/export/chartexport.hxx
@@ -99,7 +99,6 @@ private:
     bool                mbIs3DChart;
     bool                mbStacked;
     bool                mbPercent;
-    bool                mbClustered;
 
 private:
     sal_Int32 getChartType();
